# SupportTickets-Prioritization

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
results/: results.csv
src/: optuna_search.py  support_tickets.ipynb  tuna.py
src/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
src/catboost_info/learn/: events.out.tfevents
tests/: conftest.py  create_fixtures.ipynb
tests/data/: test_schema.py
tests/data/fixtures/: dataset_sample.csv  test_sample.csv  train_sample.csv
tests/models/: test_invariants.py  test_metrics.py  test_objectives.py
tests/smoke/: test_imports.py
